# Exam

./: CMakeLists.txt  README.md  main.cpp
Controller/: controller.cpp  controller.h
Model/: model.cpp  model.h
View/: question_view.cpp  question_view.h  view.cpp  view.h
